syntax = "proto3";

option csharp_namespace = "Auth.Grpc";

package auth;

// The User information returned by the service
message UserInfo {
    string first_name= 1;
    string last_name= 2;
    string email = 3;
    string affiliation = 4;
}

// The request to get user information by ID
message GetUserRequest {
    string user_id = 1;
}

// The response that wraps the user info
message GetUserResponse {
    UserInfo user_info = 1;
}

// The User service definition
service UserService {
    rpc GetUserInfo(GetUserRequest) returns (GetUserResponse);
}
